--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
+ 
     /* Reset CSS */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.clear {
+    clear: both;
 }
 
 html {
@@ -17,6 +22,7 @@ html {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 #nav {
@@ -93,10 +99,195 @@ html {
     background-color: #f44336 !important;
 }
 
+    /* Slider */
 #slider {
-    background-color: #333;
+    position: relative;
+    margin-top: 46px;
+    padding-top: 50%;
+    background: url('/assets/img/slider/chicago.jpg') top center / cover no-repeat;
 }
 
-#content {
-    height: 1000px;
+#slider .text-slider {
+    color: #fff;
+    position: absolute;
+    padding: 32px 16px;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
+
+#slider .text-slider h1 {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+#slider .text-slider h5 {
+    margin: 15px 0px;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+    /* Content */
+
+        /* About */
+#content .content-section {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 64px 16px;
+}
+
+#content .section-heading {
+    letter-spacing: 4px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    margin: 10px 0px;
+    font-size: 30px;
+    text-align: center !important;
+}
+
+#content .section-sub-heading {
+    opacity: 0.6;
+    text-align: center !important;
+    font-family: "Lato", sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    font-style: italic;
+    margin: 15px 0px;
+}
+
+#content .about .about-text {
+    font-family: "Lato", sans-serif;
+    text-align: justify !important;
+    line-height: 1.5;
+    margin: 15px 0px;
+    font-size: 15px;
+    text-size-adjust: 100%;
+}
+
+#content .about .member-list {
+    padding: 32px 0px;
+}
+
+#content .about .member-list .member-item {
+    width: calc(100% / 3);
+    float: left;
+    text-align: center;
+}
+
+#content .about .member-list .member-item .member-name {
+    font-family: "Lato", sans-serif;
+    font-size: 15px;
+    margin: 15px 0px;
+}
+
+#content .about .member-list .member-item img {
+    margin: 0px 0px 16px 0px;
+    width: 154px;
+}
+
+        /* Tour */
+#content .tour {
+    background-origin: margin-box;
+    background-color: #000;
+}
+
+#content .tour .content-section {
+    color: #fff;
+}
+
+#content .tour .content-section .section-sub-heading {
+    font-style: italic;
+}
+
+.book-ticket {
+    font-family: "Lato", sans-serif;
+    color: #757575 !important;
+    background-origin: padding-box;
+    background-color: rgba(255, 255, 255, 1);
+    font-size: 15px;
+    border: 1px solid #ccc!important;
+}
+
+.book-ticket li {
+    padding: 8px 16px;
+    border-bottom: 1px solid #ddd;
+    list-style-type: none;
+    line-height: 22.5px;
+}
+
+.book-ticket .sold-out {
+    margin-left: 16px;
+    padding: 0px 8px;
+    background-color: #f44336 !important;
+    color: #fff !important;
+}
+
+.book-ticket .none {
+    float : right;
+    padding: 0px 8px;
+    background-color: rgb(0,0,0);
+    color: rgb(255,255,255);
+    margin-right: 16px;
+    border-radius: 50%;
+}
+
+#content .tour .tour-place-list {
+    padding: 32px 8px;
+    margin: 0px -16px;
+}
+
+#content .tour .tour-place-item {
+    padding: 0px 8px;
+    margin-bottom: 16px;
+    float: left;
+    width: calc(100% / 3);
+}
+
+#content .tour .tour-place-item div{
+    background-color: rgb(255,255,255);
+    padding: 0.10% 16px 0.10% 16px;
+}
+
+#content .tour .tour-place-item img {
+    display: block;
+    width: 100%;
+}
+
+#content .tour .tour-place-item img:hover {
+    opacity: 0.6;
+}
+
+#content .tour .tour-place-item .place,
+#content .tour .tour-place-item .time,
+#content .tour .tour-place-item .desc
+{
+    font-family: "Lato", sans-serif;
+    margin: 15px 0px;
+    font-size: 15px;
+    color: rgb(0, 0, 0);
+}
+
+#content .tour .tour-place-item .time
+{
+    opacity: 0.6;
+}
+
+
+#content .tour .tour-place-item .place-buy-tickets {
+    display: inline-block;
+    font-family: "Lato", sans-serif;
+    margin-bottom: 16px;
+    padding: 8px 16px;
+    background-color: #000;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+#content .tour .tour-place-item .place-buy-tickets:hover {
+    color: #000!important;
+    background-color: #ccc!important;
+}
+
