--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -5,26 +5,41 @@ html
     font-size: 15px;
 }
 
+
+.display-none 
+{
+    display: none !important;
+}
+
+#style-modal
+{
+    display: none;
+    background-color: rgba(0,0,0,0.4);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .modal 
 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #fff;
-    position: fixed;
-    width: 900px;
-    height: 475px;
     max-width: 900px;
     max-height: 475px; 
-    text-align: center;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    margin: auto;
-    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
 }
 
 .modal .header 
 {
+    position: relative;
     background-color: rgb(0,150,136);
     padding: 32px 16px;
 }
@@ -39,6 +54,7 @@ html
     text-align: center;
     top: 0;
     right: 0;
+    float: right;
     font-size: 15px !important;
     width: 45px !important;
     height: 53px !important;
@@ -102,6 +118,10 @@ html
     background-color: #ccc!important;
 }
 
+.modal .footer
+{
+    background-color: #fff !important;
+}
 .modal .footer .close
 {
     color: #fff;
@@ -125,9 +145,4 @@ html
     margin: 15px 0px;
     float: right;
     line-height: 1.5;
-}
-
-.modal .footer a
-{
-    color: #2196F3 !important;
 }
