--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,442 +1,445 @@
  
     /* Reset CSS */
-* 
-{
-    scroll-behavior: smooth;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-.clear 
-{
-    clear: both;
-}
-
-.text-center 
-{
-    text-align: center;
-}
-
-.row 
-{
-    padding: 32px 0px;
-}
-
-.row-none
-{
-    padding: 0px;
-    margin: 0px;
-}
-
-.row::after,
-.row-none::after
-{
-    content: "";
-    display: block;
-    clear: both;
-}
-
-
-.col-none-padding 
-{
-    float :left;
-}
-
-.col 
-{
-    float: left;
-    padding-left: 8px;
-    padding-right: 8px;
-}
-
-.col-full 
-{
-    width: 100%;
-}
-
-.col-half 
-{
-    width: 50%;
-}
-
-.col-third 
-{
-    width: calc(100% /3);
-}
-
-html 
-{
-    font-family: "Lato", sans-serif;
-    font-size: 15px;
-}
-
-    /* Header */
-#header 
-{
-    background-color: black;
-    height: 46px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-
-#nav 
-{
-    display: inline-block;
-}
-
-#nav > li
-{
-    display: inline-block;
-    position: relative;
-}
-
-#nav li 
-{
-    list-style-type: none;
-}
-
-#nav > li > a 
-{
-    color:rgb(255, 255, 255);
-    text-transform: uppercase;
-}
-
-#nav li a
-{
-    text-decoration: none;
-    line-height: 46px;
-    padding: 0px 20px;
-    display: inline-block;
-}
-
-#nav .subnav li:hover a,
-#nav > li:hover > a,
-#nav > li:hover > a > div 
-{
-    color: #000 !important;
-    background-color: #ccc !important;
-}
-
-#nav li:hover .subnav 
-{
-    display: inline-block;
-}
-
-#nav .subnav
-{
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0%;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-#nav .subnav a
-{
-    display: inline-block;
-    padding: 0px 20px 0px 12px;
-    line-height: 40px; 
-    color:#000;
-}
-
-#nav .subnav-down 
-{
-    display: inline-block;
-    font-size: 14px;
-    color: #fff;
-}
-
-#header .search-btn 
-{
-    float: right;
-    padding: 0px 21px;
-}
-
-#header .search-icon 
-{
-    color: #ccc;
-    font-size: 20px;
-    line-height: 46px;
-}
-
-#header .search-btn:hover 
-{
-    cursor: pointer;
-    background-color: #f44336 !important;
-}
-
-    /* Slider */
-#slider 
-{
-    position: relative;
-    margin-top: 46px;
-    padding-top: 50%;
-    background: url(../img/slider/chicago.jpg) top center / cover no-repeat;
-}
-
-#slider .text-slider 
-{
-    color: #fff;
-    position: absolute;
-    padding: 32px 16px;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-}
-
-#slider .text-slider h1 
-{
-
-    font-weight: 400;
-    font-size: 24px;
-    margin: 10px 0;
-}
-
-#slider .text-slider h5 
-{
-    margin: 15px 0px;
-    font-size: 15px;
-    line-height: 1.5;
-}
-
-    /* Content */
-
-#content .content-section 
-{
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 64px 16px;
-}
-
-#content .section-heading 
-{
-    letter-spacing: 4px;
-    font-weight: 400;
-    margin: 10px 0px;
-    font-size: 30px;
-    text-align: center !important;
-}
-
-#content .section-sub-heading 
-{
-    opacity: 0.6;
-    text-align: center !important;
-    font-size: 15px;
-    line-height: 1.5;
-    font-style: italic;
-    margin: 15px 0px;
-}
-
-#content .about .about-text 
-{
-    text-align: justify !important;
-    line-height: 1.5;
-    margin: 15px 0px;
-    font-size: 15px;
-    text-size-adjust: 100%;
-}
-
-    /* About */
-#content .about .member-list 
-{
-    padding: 32px 0px;
-}
-
-#content .about .member-list .member-item .member-name 
-{
-    font-size: 15px;
-    margin: 15px 0px;
-}
-
-#content .about .member-list .member-item img 
-{
-    margin: 0px 0px 16px 0px;
-    width: 154px;
-}
-
-    /* Tour */
-#content .tour 
-{
-    background-origin: margin-box;
-    background-color: #000;
-}
-
-#content .tour .content-section 
-{
-    color: #fff;
-}
-
-#content .tour .content-section .section-sub-heading 
-{
-    font-style: italic;
-}
-
-.book-ticket 
-{
-    color: #757575 !important;
-    background-origin: padding-box;
-    background-color: rgba(255, 255, 255, 1);
-    font-size: 15px;
-    border: 1px solid #ccc!important;
-}
-
-.book-ticket li 
-{
-    padding: 8px 16px;
-    border-bottom: 1px solid #ddd;
-    list-style-type: none;
-    line-height: 22.5px;
-}
-
-.book-ticket .sold-out 
-{
-    margin-left: 16px;
-    padding: 0px 8px;
-    background-color: #f44336 !important;
-    color: #fff !important;
-}
-
-.book-ticket .none 
-{
-    float : right;
-    padding: 0px 8px;
-    background-color: rgb(0,0,0);
-    color: rgb(255,255,255);
-    margin-right: 16px;
-    border-radius: 50%;
-}
-
-#content .tour .tour-place-list 
-{
-    padding: 32px 8px;
-    margin: 0px -16px;
-}
-
-#content .tour .tour-place-item 
-{
-    padding: 0px 8px;
-    margin-bottom: 16px;
-    float: left;
-    width: calc(100% / 3);
-}
-
-#content .tour .tour-place-item div
-{
-    background-color: rgb(255,255,255);
-    padding: 0.10% 16px 0.10% 16px;
-}
-
-#content .tour .tour-place-item img 
-{
-    display: block;
-    width: 100%;
-}
-
-#content .tour .tour-place-item img:hover 
-{
-    opacity: 0.6;
-}
-
-#content .tour .tour-place-item .place,
-#content .tour .tour-place-item .time,
-#content .tour .tour-place-item .desc
-{
-    margin: 15px 0px;
-    font-size: 15px;
-    color: rgb(0, 0, 0);
-}
-
-#content .tour .tour-place-item .time
-{
-    opacity: 0.6;
-}
-
-
-#content .tour .tour-place-item .place-buy-tickets 
-{
-    display: inline-block;
-    margin-bottom: 16px;
-    padding: 8px 16px;
-    background-color: #000;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#content .tour .tour-place-item .place-buy-tickets:hover 
-{
-    color: #000!important;
-    background-color: #ccc!important;
-}
-
-    /* Contact */
-
-#content .contact .contact2 
-{
-    padding: 32px 0px;
-}
-
-#content .contact .list-contact 
-{
-    display: inline-block;
-    margin-bottom: 16px;
-}
-
-#content .contact .list-contact .item-contact 
-{
-    list-style-type: none;
-}
-
-#content .contact .list-contact p 
-{
-    display: inline-block;
-    line-height: 27px;
-    font-size: 18px;
-}
-
-.contact .form-info 
-{
-    border: 1px solid #000;
-    background-color: #fff;
-    padding: 8px;
-    width: 100%;
-    line-height: 22.5px;
-    font-size: 18px;
-}
-
-.contact button 
-{
-    background-color: #000;
-    color: #fff;
-    border: none;
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    font-size: 15px;
-}
-.contact button:hover
-{
-    color: #000!important;
-    background-color: #ccc!important;
-}
-
-    /* Footer */
-
-#footer .social a 
-{
-    font-size: 25px;
-    word-spacing: 5px;
-    text-decoration: none;
-    color: #757575;
-}
-#footer .social a:hover
-{
-    opacity: 0.6;
-}
+    * 
+    {
+        scroll-behavior: smooth;
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    
+    .clear 
+    {
+        clear: both;
+    }
+    
+    .text-center 
+    {
+        text-align: center;
+    }
+    
+    .row 
+    {
+        padding: 32px 0px;
+    }
+    
+    .row-none
+    {
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    .row::after,
+    .row-none::after
+    {
+        content: "";
+        display: block;
+        clear: both;
+    }
+    
+    
+    .col-none-padding 
+    {
+        float :left;
+    }
+    
+    .col 
+    {
+        float: left;
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+    
+    .col-full 
+    {
+        width: 100%;
+    }
+    
+    .col-half 
+    {
+        width: 50%;
+    }
+    
+    .col-third 
+    {
+        width: calc(100% /3);
+    }
+    
+    html 
+    {
+        font-family: "Lato", sans-serif;
+        font-size: 15px;
+    }
+    
+        /* Header */
+    #header 
+    {
+        background-color: black;
+        height: 46px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+    
+    #nav 
+    {
+        display: inline-block;
+    }
+    
+    #nav > li
+    {
+        display: inline-block;
+        position: relative;
+    }
+    
+    #nav li 
+    {
+        list-style-type: none;
+    }
+    
+    #nav > li > a 
+    {
+        color:rgb(255, 255, 255);
+        text-transform: uppercase;
+    }
+    
+    #nav li a
+    {
+        text-decoration: none;
+        line-height: 46px;
+        padding: 0px 20px;
+        display: inline-block;
+    }
+    
+    #nav .subnav li:hover a,
+    #nav > li:hover > a,
+    #nav > li:hover > a > div 
+    {
+        color: #000 !important;
+        background-color: #ccc !important;
+    }
+    
+    #nav li:hover .subnav 
+    {
+        display: inline-block;
+    }
+    
+    #nav .subnav
+    {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0%;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+    
+    #nav .subnav a
+    {
+        display: inline-block;
+        padding: 0px 20px 0px 12px;
+        line-height: 40px; 
+        color:#000;
+    }
+    
+    #nav .subnav-down 
+    {
+        display: inline-block;
+        font-size: 14px;
+        color: #fff;
+    }
+    
+    #header .search-btn 
+    {
+        float: right;
+        padding: 0px 21px;
+    }
+    
+    #header .search-icon 
+    {
+        color: #ccc;
+        font-size: 20px;
+        line-height: 46px;
+    }
+    
+    #header .search-btn:hover 
+    {
+        cursor: pointer;
+        background-color: #f44336 !important;
+    }
+    
+    #header .mobile-menu {
+        display: none;
+    }
+        /* Slider */
+    #slider 
+    {
+        position: relative;
+        margin-top: 46px;
+        padding-top: 50%;
+        background: url(../img/slider/chicago.jpg) top center / cover no-repeat;
+    }
+    
+    #slider .text-slider 
+    {
+        color: #fff;
+        position: absolute;
+        padding: 32px 16px;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+    }
+    
+    #slider .text-slider h1 
+    {
+    
+        font-weight: 400;
+        font-size: 24px;
+        margin: 10px 0;
+    }
+    
+    #slider .text-slider h5 
+    {
+        margin: 15px 0px;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+    
+        /* Content */
+    
+    #content .content-section 
+    {
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 64px 16px;
+    }
+    
+    #content .section-heading 
+    {
+        letter-spacing: 4px;
+        font-weight: 400;
+        margin: 10px 0px;
+        font-size: 30px;
+        text-align: center !important;
+    }
+    
+    #content .section-sub-heading 
+    {
+        opacity: 0.6;
+        text-align: center !important;
+        font-size: 15px;
+        line-height: 1.5;
+        font-style: italic;
+        margin: 15px 0px;
+    }
+    
+    #content .about .about-text 
+    {
+        text-align: justify !important;
+        line-height: 1.5;
+        margin: 15px 0px;
+        font-size: 15px;
+        text-size-adjust: 100%;
+    }
+    
+        /* About */
+    #content .about .member-list 
+    {
+        padding: 32px 0px;
+    }
+    
+    #content .about .member-list .member-item .member-name 
+    {
+        font-size: 15px;
+        margin: 15px 0px;
+    }
+    
+    #content .about .member-list .member-item img 
+    {
+        margin: 0px 0px 16px 0px;
+        width: 154px;
+    }
+    
+        /* Tour */
+    #content .tour 
+    {
+        background-origin: margin-box;
+        background-color: #000;
+    }
+    
+    #content .tour .content-section 
+    {
+        color: #fff;
+    }
+    
+    #content .tour .content-section .section-sub-heading 
+    {
+        font-style: italic;
+    }
+    
+    .book-ticket 
+    {
+        color: #757575 !important;
+        background-origin: padding-box;
+        background-color: rgba(255, 255, 255, 1);
+        font-size: 15px;
+        border: 1px solid #ccc!important;
+    }
+    
+    .book-ticket li 
+    {
+        padding: 8px 16px;
+        border-bottom: 1px solid #ddd;
+        list-style-type: none;
+        line-height: 22.5px;
+    }
+    
+    .book-ticket .sold-out 
+    {
+        margin-left: 16px;
+        padding: 0px 8px;
+        background-color: #f44336 !important;
+        color: #fff !important;
+    }
+    
+    .book-ticket .none 
+    {
+        float : right;
+        padding: 0px 8px;
+        background-color: rgb(0,0,0);
+        color: rgb(255,255,255);
+        margin-right: 16px;
+        border-radius: 50%;
+    }
+    
+    #content .tour .tour-place-list 
+    {
+        padding: 32px 8px;
+        margin: 0px -16px;
+    }
+    
+    #content .tour .tour-place-item 
+    {
+        padding: 0px 8px;
+        margin-bottom: 16px;
+        float: left;
+        width: calc(100% / 3);
+    }
+    
+    #content .tour .tour-place-item div
+    {
+        background-color: rgb(255,255,255);
+        padding: 0.10% 16px 0.10% 16px;
+    }
+    
+    #content .tour .tour-place-item img 
+    {
+        display: block;
+        width: 100%;
+    }
+    
+    #content .tour .tour-place-item img:hover 
+    {
+        opacity: 0.6;
+    }
+    
+    #content .tour .tour-place-item .place,
+    #content .tour .tour-place-item .time,
+    #content .tour .tour-place-item .desc
+    {
+        margin: 15px 0px;
+        font-size: 15px;
+        color: rgb(0, 0, 0);
+    }
+    
+    #content .tour .tour-place-item .time
+    {
+        opacity: 0.6;
+    }
+    
+    
+    #content .tour .tour-place-item .place-buy-tickets 
+    {
+        display: inline-block;
+        margin-bottom: 16px;
+        padding: 8px 16px;
+        background-color: #000;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    #content .tour .tour-place-item .place-buy-tickets:hover 
+    {
+        color: #000!important;
+        background-color: #ccc!important;
+    }
+    
+        /* Contact */
+    
+    #content .contact .contact2 
+    {
+        padding: 32px 0px;
+    }
+    
+    #content .contact .list-contact 
+    {
+        display: inline-block;
+        margin-bottom: 16px;
+    }
+    
+    #content .contact .list-contact .item-contact 
+    {
+        list-style-type: none;
+    }
+    
+    #content .contact .list-contact p 
+    {
+        display: inline-block;
+        line-height: 27px;
+        font-size: 18px;
+    }
+    
+    .contact .form-info 
+    {
+        border: 1px solid #000;
+        background-color: #fff;
+        padding: 8px;
+        width: 100%;
+        line-height: 22.5px;
+        font-size: 18px;
+    }
+    
+    .contact button 
+    {
+        background-color: #000;
+        color: #fff;
+        border: none;
+        display: inline-block;
+        vertical-align: middle;
+        overflow: hidden;
+        text-decoration: none;
+        font-size: 15px;
+    }
+    .contact button:hover
+    {
+        color: #000!important;
+        background-color: #ccc!important;
+    }
+    
+        /* Footer */
+    
+    #footer .social a 
+    {
+        font-size: 25px;
+        word-spacing: 5px;
+        text-decoration: none;
+        color: #757575;
+    }
+    #footer .social a:hover
+    {
+        opacity: 0.6;
+    }
