--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,12 @@
-@media all and (max-width: 740px) {
+/* Mobile */
+
+@media all and (max-width: 739px) {
+    .s-full-width {
+        width: 100% !important;
+    }
+    .s-col-full {
+        width: 100% !important;
+    }
     #header {
         overflow: hidden;
     }
@@ -11,6 +19,9 @@
     }
     #nav > li > a {
         display: block;
+    }
+    #slider .text-slider {
+        display: none;
     }
     #header .search-btn {
         display: none;
@@ -29,4 +40,38 @@
         background-color: #ccc !important;
         color: black;
     }
+    .member-mobile {
+        width: 100% !important;
+    }
+    #content .about .member-list .member-item img {
+        width: 60%;
+    }
+    #contact .input {
+        width: 100%;
+        padding: 0px 8px;
+    }
+    #contact button {
+        margin: 16px 8px !important;
+    }
+    #tour button {
+        width: 100%;
+    }
+    #footer .social a {
+        font-size: 30px;
+        margin: 0px 8px;
+    }
+}
+
+
+/* Ipad */
+@media all and (max-width: 1023px) and (min-width: 740px) {
+    #footer .social a {
+        font-size: 50px;
+        margin: 0px 8px;
+    }
+}
+
+/* Ipad && Mobile */ 
+@media all and (max-width: 1023px) {
+   
 }
