--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,7 @@
         bottom: 0;
         width: 100%;
         text-align: center;
+        text-shadow: 0px 0px 1px black;
     }
     
     #slider .text-slider h1 
